# stt-for-diff-drive

./: .gitignore  CMakeLists.txt  LICENSE  coefficients.csv  package.xml  readme.md
config/: coefficients.csv  trajectory.csv
include/stt-for-diff-drive/: setpoint.hpp  tube.hpp  turtlebot_node.hpp
src/: generate_stt.py  main.py  plot_trajectory.py  plotter.py  stt.py  tube_pipeline.py  tube_spec.py
src/scripts/: main.cpp  turtlebot_node.cpp
